@startuml
'https://plantuml.com/class-diagram
class ShoppingCart {
- Map<String,ShoppingCartItem> items
+ boolean addItem(String,int)
+ boolean updateQuantity(String,int)
+ ShoppingCartItem[] getItems()
- boolean isItemNameValid(String)
}
class ShoppingCartItem {
- String itemName
- int quantity
+ String getItemName()
+ int getQuantity()
+ String toString()
}
class DigitalCartItem{
-String downloadCode
}
ShoppingCart *-- ShoppingCartItem
ShoppingCartItem <|-- DigitalCartItem
@enduml